samples/_failures_safe/1761534415_b06363_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c1355e5.c: In function ‘main’:
./samples/SAFE/__tmp_2c1355e5.c:150:9: error: expected expression at end of input
  150 |         printf("%c",
      |         ^~~~~~
./samples/SAFE/__tmp_2c1355e5.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c1355e5.c:150:9: error: expected declaration or statement at end of input
